old alerts cleanup